gen/cppParser.cpp

// Generated from src/grammar/cpp.g4 by ANTLR 4.12.0


#include "cppListener.h"

#include "cppParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CppParserStaticData final {
  CppParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CppParserStaticData(const CppParserStaticData&) = delete;
  CppParserStaticData(CppParserStaticData&&) = delete;
  CppParserStaticData& operator=(const CppParserStaticData&) = delete;
  CppParserStaticData& operator=(CppParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cppParserOnceFlag;
CppParserStaticData *cppParserStaticData = nullptr;

void cppParserInitialize() {
  assert(cppParserStaticData == nullptr);
  auto staticData = std::make_unique<CppParserStaticData>(
    std::vector<std::string>{
      "start", "topLevelDecl", "classDecl", "classBody", "accessSpec", "classMember", 
      "fieldDecl", "ctorDecl", "methodDecl", "fnDecl", "params", "param", 
      "stmt", "vardecl", "assign", "exprStmt", "block", "whileStmt", "ifStmt", 
      "returnStmt", "expr", "assignExpr", "logicalOrExpr", "logicalAndExpr", 
      "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
      "unaryExpr", "postfixExpr", "memberAccess", "call", "args", "primaryExpr", 
      "literal", "type", "baseType"
    },
    std::vector<std::string>{
      "", "'class'", "':'", "'public'", "';'", "'{'", "'}'", "'('", "')'", 
      "'virtual'", "','", "'='", "'while'", "'if'", "'else'", "'return'", 
      "'||'", "'&&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", 
      "'-'", "'*'", "'/'", "'%'", "'!'", "'.'", "'true'", "'false'", "'int'", 
      "'bool'", "'char'", "'string'", "'void'", "", "", "'&'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "ID", "NUMBER", "AMP", "CHAR", "STRING", "COMMENT_LINE", 
      "COMMENT_BLOCK", "PREPROC", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cppParserStaticData = staticData.release();
}

}

cppParser::cppParser(TokenStream *input) : cppParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

cppParser::cppParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  cppParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cppParserStaticData->atn, cppParserStaticData->decisionToDFA, cppParserStaticData->sharedContextCache, options);
}

cppParser::~cppParser() {
  delete _interpreter;
}

const atn::ATN& cppParser::getATN() const {
  return *cppParserStaticData->atn;
}

std::string cppParser::getGrammarFileName() const {
  return "cpp.g4";
}

const std::vector<std::string>& cppParser::getRuleNames() const {
  return cppParserStaticData->ruleNames;
}

const dfa::Vocabulary& cppParser::getVocabulary() const {
  return cppParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView cppParser::getSerializedATN() const {
  return cppParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

cppParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cppParser::StartContext::EOF() {
  return getToken(cppParser::EOF, 0);
}

std::vector<cppParser::TopLevelDeclContext *> cppParser::StartContext::topLevelDecl() {
  return getRuleContexts<cppParser::TopLevelDeclContext>();
}

cppParser::TopLevelDeclContext* cppParser::StartContext::topLevelDecl(size_t i) {
  return getRuleContext<cppParser::TopLevelDeclContext>(i);
}

std::vector<cppParser::StmtContext *> cppParser::StartContext::stmt() {
  return getRuleContexts<cppParser::StmtContext>();
}

cppParser::StmtContext* cppParser::StartContext::stmt(size_t i) {
  return getRuleContext<cppParser::StmtContext>(i);
}


size_t cppParser::StartContext::getRuleIndex() const {
  return cppParser::RuleStart;
}

void cppParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void cppParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

cppParser::StartContext* cppParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, cppParser::RuleStart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7695021158562) != 0)) {
      setState(76);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(74);
        topLevelDecl();
        break;
      }

      case 2: {
        setState(75);
        stmt();
        break;
      }

      default:
        break;
      }
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(cppParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelDeclContext ------------------------------------------------------------------

cppParser::TopLevelDeclContext::TopLevelDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cppParser::ClassDeclContext* cppParser::TopLevelDeclContext::classDecl() {
  return getRuleContext<cppParser::ClassDeclContext>(0);
}

cppParser::FnDeclContext* cppParser::TopLevelDeclContext::fnDecl() {
  return getRuleContext<cppParser::FnDeclContext>(0);
}


size_t cppParser::TopLevelDeclContext::getRuleIndex() const {
  return cppParser::RuleTopLevelDecl;
}

void cppParser::TopLevelDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelDecl(this);
}

void cppParser::TopLevelDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelDecl(this);
}

cppParser::TopLevelDeclContext* cppParser::topLevelDecl() {
  TopLevelDeclContext *_localctx = _tracker.createInstance<TopLevelDeclContext>(_ctx, getState());
  enterRule(_localctx, 2, cppParser::RuleTopLevelDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(85);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case cppParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(83);
        classDecl();
        break;
      }

      case cppParser::T__32:
      case cppParser::T__33:
      case cppParser::T__34:
      case cppParser::T__35:
      case cppParser::T__36:
      case cppParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(84);
        fnDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclContext ------------------------------------------------------------------

cppParser::ClassDeclContext::ClassDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> cppParser::ClassDeclContext::ID() {
  return getTokens(cppParser::ID);
}

tree::TerminalNode* cppParser::ClassDeclContext::ID(size_t i) {
  return getToken(cppParser::ID, i);
}

cppParser::ClassBodyContext* cppParser::ClassDeclContext::classBody() {
  return getRuleContext<cppParser::ClassBodyContext>(0);
}


size_t cppParser::ClassDeclContext::getRuleIndex() const {
  return cppParser::RuleClassDecl;
}

void cppParser::ClassDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassDecl(this);
}

void cppParser::ClassDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassDecl(this);
}

cppParser::ClassDeclContext* cppParser::classDecl() {
  ClassDeclContext *_localctx = _tracker.createInstance<ClassDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, cppParser::RuleClassDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(cppParser::T__0);
    setState(88);
    match(cppParser::ID);
    setState(92);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cppParser::T__1) {
      setState(89);
      match(cppParser::T__1);
      setState(90);
      match(cppParser::T__2);
      setState(91);
      match(cppParser::ID);
    }
    setState(94);
    classBody();
    setState(96);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cppParser::T__3) {
      setState(95);
      match(cppParser::T__3);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassBodyContext ------------------------------------------------------------------

cppParser::ClassBodyContext::ClassBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cppParser::AccessSpecContext* cppParser::ClassBodyContext::accessSpec() {
  return getRuleContext<cppParser::AccessSpecContext>(0);
}

std::vector<cppParser::ClassMemberContext *> cppParser::ClassBodyContext::classMember() {
  return getRuleContexts<cppParser::ClassMemberContext>();
}

cppParser::ClassMemberContext* cppParser::ClassBodyContext::classMember(size_t i) {
  return getRuleContext<cppParser::ClassMemberContext>(i);
}


size_t cppParser::ClassBodyContext::getRuleIndex() const {
  return cppParser::RuleClassBody;
}

void cppParser::ClassBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassBody(this);
}

void cppParser::ClassBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassBody(this);
}

cppParser::ClassBodyContext* cppParser::classBody() {
  ClassBodyContext *_localctx = _tracker.createInstance<ClassBodyContext>(_ctx, getState());
  enterRule(_localctx, 6, cppParser::RuleClassBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(cppParser::T__4);
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cppParser::T__2) {
      setState(99);
      accessSpec();
    }
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 541165879808) != 0)) {
      setState(102);
      classMember();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(108);
    match(cppParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AccessSpecContext ------------------------------------------------------------------

cppParser::AccessSpecContext::AccessSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cppParser::AccessSpecContext::getRuleIndex() const {
  return cppParser::RuleAccessSpec;
}

void cppParser::AccessSpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAccessSpec(this);
}

void cppParser::AccessSpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAccessSpec(this);
}

cppParser::AccessSpecContext* cppParser::accessSpec() {
  AccessSpecContext *_localctx = _tracker.createInstance<AccessSpecContext>(_ctx, getState());
  enterRule(_localctx, 8, cppParser::RuleAccessSpec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(cppParser::T__2);
    setState(111);
    match(cppParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassMemberContext ------------------------------------------------------------------

cppParser::ClassMemberContext::ClassMemberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cppParser::FieldDeclContext* cppParser::ClassMemberContext::fieldDecl() {
  return getRuleContext<cppParser::FieldDeclContext>(0);
}

cppParser::MethodDeclContext* cppParser::ClassMemberContext::methodDecl() {
  return getRuleContext<cppParser::MethodDeclContext>(0);
}

cppParser::CtorDeclContext* cppParser::ClassMemberContext::ctorDecl() {
  return getRuleContext<cppParser::CtorDeclContext>(0);
}


size_t cppParser::ClassMemberContext::getRuleIndex() const {
  return cppParser::RuleClassMember;
}

void cppParser::ClassMemberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassMember(this);
}

void cppParser::ClassMemberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassMember(this);
}

cppParser::ClassMemberContext* cppParser::classMember() {
  ClassMemberContext *_localctx = _tracker.createInstance<ClassMemberContext>(_ctx, getState());
  enterRule(_localctx, 10, cppParser::RuleClassMember);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(113);
      fieldDecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(114);
      methodDecl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(115);
      ctorDecl();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldDeclContext ------------------------------------------------------------------

cppParser::FieldDeclContext::FieldDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cppParser::TypeContext* cppParser::FieldDeclContext::type() {
  return getRuleContext<cppParser::TypeContext>(0);
}

tree::TerminalNode* cppParser::FieldDeclContext::ID() {
  return getToken(cppParser::ID, 0);
}


size_t cppParser::FieldDeclContext::getRuleIndex() const {
  return cppParser::RuleFieldDecl;
}

void cppParser::FieldDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFieldDecl(this);
}

void cppParser::FieldDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFieldDecl(this);
}

cppParser::FieldDeclContext* cppParser::fieldDecl() {
  FieldDeclContext *_localctx = _tracker.createInstance<FieldDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, cppParser::RuleFieldDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    type();
    setState(119);
    match(cppParser::ID);
    setState(120);
    match(cppParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CtorDeclContext ------------------------------------------------------------------

cppParser::CtorDeclContext::CtorDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cppParser::CtorDeclContext::ID() {
  return getToken(cppParser::ID, 0);
}

cppParser::BlockContext* cppParser::CtorDeclContext::block() {
  return getRuleContext<cppParser::BlockContext>(0);
}

cppParser::ParamsContext* cppParser::CtorDeclContext::params() {
  return getRuleContext<cppParser::ParamsContext>(0);
}


size_t cppParser::CtorDeclContext::getRuleIndex() const {
  return cppParser::RuleCtorDecl;
}

void cppParser::CtorDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCtorDecl(this);
}

void cppParser::CtorDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCtorDecl(this);
}

cppParser::CtorDeclContext* cppParser::ctorDecl() {
  CtorDeclContext *_localctx = _tracker.createInstance<CtorDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, cppParser::RuleCtorDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(cppParser::ID);
    setState(123);
    match(cppParser::T__6);
    setState(125);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 541165879296) != 0)) {
      setState(124);
      params();
    }
    setState(127);
    match(cppParser::T__7);
    setState(128);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodDeclContext ------------------------------------------------------------------

cppParser::MethodDeclContext::MethodDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cppParser::TypeContext* cppParser::MethodDeclContext::type() {
  return getRuleContext<cppParser::TypeContext>(0);
}

tree::TerminalNode* cppParser::MethodDeclContext::ID() {
  return getToken(cppParser::ID, 0);
}

cppParser::BlockContext* cppParser::MethodDeclContext::block() {
  return getRuleContext<cppParser::BlockContext>(0);
}

cppParser::ParamsContext* cppParser::MethodDeclContext::params() {
  return getRuleContext<cppParser::ParamsContext>(0);
}


size_t cppParser::MethodDeclContext::getRuleIndex() const {
  return cppParser::RuleMethodDecl;
}

void cppParser::MethodDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethodDecl(this);
}

void cppParser::MethodDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethodDecl(this);
}

cppParser::MethodDeclContext* cppParser::methodDecl() {
  MethodDeclContext *_localctx = _tracker.createInstance<MethodDeclContext>(_ctx, getState());
  enterRule(_localctx, 16, cppParser::RuleMethodDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cppParser::T__8) {
      setState(130);
      match(cppParser::T__8);
    }
    setState(133);
    type();
    setState(134);
    match(cppParser::ID);
    setState(135);
    match(cppParser::T__6);
    setState(137);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 541165879296) != 0)) {
      setState(136);
      params();
    }
    setState(139);
    match(cppParser::T__7);
    setState(140);
    block();
    setState(142);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cppParser::T__3) {
      setState(141);
      match(cppParser::T__3);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FnDeclContext ------------------------------------------------------------------

cppParser::FnDeclContext::FnDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cppParser::TypeContext* cppParser::FnDeclContext::type() {
  return getRuleContext<cppParser::TypeContext>(0);
}

tree::TerminalNode* cppParser::FnDeclContext::ID() {
  return getToken(cppParser::ID, 0);
}

cppParser::BlockContext* cppParser::FnDeclContext::block() {
  return getRuleContext<cppParser::BlockContext>(0);
}

cppParser::ParamsContext* cppParser::FnDeclContext::params() {
  return getRuleContext<cppParser::ParamsContext>(0);
}


size_t cppParser::FnDeclContext::getRuleIndex() const {
  return cppParser::RuleFnDecl;
}

void cppParser::FnDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFnDecl(this);
}

void cppParser::FnDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFnDecl(this);
}

cppParser::FnDeclContext* cppParser::fnDecl() {
  FnDeclContext *_localctx = _tracker.createInstance<FnDeclContext>(_ctx, getState());
  enterRule(_localctx, 18, cppParser::RuleFnDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    type();
    setState(145);
    match(cppParser::ID);
    setState(146);
    match(cppParser::T__6);
    setState(148);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 541165879296) != 0)) {
      setState(147);
      params();
    }
    setState(150);
    match(cppParser::T__7);
    setState(151);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamsContext ------------------------------------------------------------------

cppParser::ParamsContext::ParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cppParser::ParamContext *> cppParser::ParamsContext::param() {
  return getRuleContexts<cppParser::ParamContext>();
}

cppParser::ParamContext* cppParser::ParamsContext::param(size_t i) {
  return getRuleContext<cppParser::ParamContext>(i);
}


size_t cppParser::ParamsContext::getRuleIndex() const {
  return cppParser::RuleParams;
}

void cppParser::ParamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParams(this);
}

void cppParser::ParamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParams(this);
}

cppParser::ParamsContext* cppParser::params() {
  ParamsContext *_localctx = _tracker.createInstance<ParamsContext>(_ctx, getState());
  enterRule(_localctx, 20, cppParser::RuleParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    param();
    setState(158);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == cppParser::T__9) {
      setState(154);
      match(cppParser::T__9);
      setState(155);
      param();
      setState(160);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

cppParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cppParser::TypeContext* cppParser::ParamContext::type() {
  return getRuleContext<cppParser::TypeContext>(0);
}

tree::TerminalNode* cppParser::ParamContext::ID() {
  return getToken(cppParser::ID, 0);
}

tree::TerminalNode* cppParser::ParamContext::AMP() {
  return getToken(cppParser::AMP, 0);
}


size_t cppParser::ParamContext::getRuleIndex() const {
  return cppParser::RuleParam;
}

void cppParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void cppParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

cppParser::ParamContext* cppParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 22, cppParser::RuleParam);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(161);
    type();
    setState(163);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cppParser::AMP) {
      setState(162);
      match(cppParser::AMP);
    }
    setState(165);
    match(cppParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
